fix notification menu targeting. decrease reader scroll blur z-index
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@9215 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_content.scss
+++ b/src/main/resources/scss/_content.scss
@@ -65,7 +65,7 @@
 	height: 30px;
 	$experimental-support-for-svg: true;
 	@include background-image(linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%));
-	z-index: 99999;
+	z-index: 9999;
 	pointer-events: none;
 	.x-ie9 & {
 		display: none;
